fix overflow content width

--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-.header {
+.content {
   width: 100%;
-  height: 100vh;
+  height: 200vh;
   background: #007aff;
   color: white;
   padding: 0 8.5%;
@@ -40,8 +40,8 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  width: 100%;
   margin-top: 100px;
+  /* width: 100%; */
 }
 .container {
   display: grid;
